# inventory-system-python

./: .env.example  .gitignore  AUDIT_LOG_CLEANUP.md  CACHE_OPTIMIZATION_GUIDE.md  CHANGELOG.md  COMPLETE_FIX_REPORT.md  DEVELOPMENT_GUIDE.md  Dockerfile  EQUIPMENT_STATS_COMPLETION_REPORT.md  FINAL_COMPLETE_SOLUTION.md  FINAL_COMPLETION_REPORT.md  MIGRATION_TO_ALEMBIC.md  PAGE_SIZE_FEATURE_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_MIGRATION.md  REMOVE_CATEGORIES_PERMISSIONS.md  SSR+SPA+PWA现代化混合架构.md  USER_PERMISSIONS_FIX_REPORT.md  VERIFICATION_REPORT.md  WINDOWS_STARTUP.md  apply_rollback_migrations.py  assign_equipment_permissions.py  audit.html  auto_backup.sh  comprehensive_test.py  create_test_users.py  debug_api_paths.py  deploy.sh  docker-compose.yml  final_functionality_test.py  final_verification.py  fine_grained_permissions.py  fix_verification.md  init_db.py  main.py  migrate_from_old_database.py  nginx.conf  pyproject.toml  restart_system.sh  (+65 more)
alembic/: env.py
data/: system_settings.json
dbbak/: inventory.db.bak1  inventory_daily_20250826_004650.json
debug/: api_client_diagnostic.html  check_users.py  cleanup_audit_logs.py  complete_login_test.py  create_admin.py  debug_attachments.py  debug_deletion.py  debug_equipment_department.py  debug_login.py  diagnose_login.html  diagnose_login_issue.py  remove_extended_fields.py  simple_login_test.html  simple_test.py  test.html  test_attachment_preview.html  test_batch_calibration.py  test_categories.py  test_category_deletion.py  test_debug_login.py  test_deletion_restrictions.py  test_departments.py  (+9 more)
(+150 files in other folders)
